[gd_scene load_steps=5 format=3 uid="uid://3jchlwoiu28r"]

[ext_resource type="Script" path="res://scripts/DebugMenu.gd" id="1_bd2gr"]
[ext_resource type="Theme" uid="uid://c72htwekbecvx" path="res://main_menu.tres" id="1_l2veu"]
[ext_resource type="Material" uid="uid://txuytfcrsayd" path="res://crt_shader.tres" id="3_g1ydd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lmwfv"]

[node name="Levels" type="Control"]
material = SubResource("ShaderMaterial_lmwfv")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 272.0
offset_top = 64.0
offset_right = 1008.0
offset_bottom = 232.0
bbcode_enabled = true
text = "[wave amp=80.0 freq=5.0 connected=1][center][font_size=100]Gunlympics[/font_size][/center][/wave]"
threaded = true

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_l2veu")
script = ExtResource("1_bd2gr")

[node name="500 M" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 320.0
theme = ExtResource("1_l2veu")
text = "500 Meters"

[node name="Hurdles" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 128.0
offset_top = 352.0
offset_right = 320.0
offset_bottom = 416.0
theme = ExtResource("1_l2veu")
text = "500 Meters
Hurdles"

[node name="Long Jump" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 128.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 512.0
theme = ExtResource("1_l2veu")
text = "Long Jump"

[node name="Volleyball" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 336.0
offset_top = 544.0
offset_right = 528.0
offset_bottom = 608.0
theme = ExtResource("1_l2veu")
disabled = true
text = "Vollleyball
"

[node name="Soccer" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 544.0
offset_top = 256.0
offset_right = 736.0
offset_bottom = 320.0
disabled = true
text = "Soccer"

[node name="Shooting" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 544.0
offset_top = 352.0
offset_right = 736.0
offset_bottom = 416.0
text = "Shooting"

[node name="Archery" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 544.0
offset_top = 448.0
offset_right = 736.0
offset_bottom = 512.0
text = "Archery
"

[node name="TugOfWar" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 752.0
offset_top = 544.0
offset_right = 944.0
offset_bottom = 608.0
disabled = true
text = "Tug-of-War"

[node name="Sailing" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 960.0
offset_top = 256.0
offset_right = 1152.0
offset_bottom = 320.0
text = "Sailing"

[node name="Boxing" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 960.0
offset_top = 352.0
offset_right = 1152.0
offset_bottom = 416.0
disabled = true
text = "Boxing
"

[node name="RockClimbing" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 960.0
offset_top = 448.0
offset_right = 1152.0
offset_bottom = 512.0
text = "Rock Climbing"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = ExtResource("3_g1ydd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="CanvasLayer/Buttons/500 M" to="CanvasLayer/Buttons" method="_on__m_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Hurdles" to="CanvasLayer/Buttons" method="_on_hurdles_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/RockClimbing" to="CanvasLayer/Buttons" method="_on_rock_climbing_pressed"]
